// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ld-heading renders 1`] = `
<ld-heading level="1">
  <mock:shadow-root>
    <h1 class="ld-heading ld-heading--h1" part="tag">
      <slot></slot>
    </h1>
  </mock:shadow-root>
  Text
</ld-heading>
`;

exports[`ld-heading renders with visual b level and explicit aria-label 1`] = `
<ld-heading aria-label="Yolo" level="1" visual-level="b3">
  <mock:shadow-root>
    <h1 aria-label="Yolo" class="ld-heading ld-heading--b3" part="tag">
      <slot></slot>
    </h1>
  </mock:shadow-root>
  Text
</ld-heading>
`;

exports[`ld-heading renders with visual b level and implicit aria-label 1`] = `
<ld-heading level="1" visual-level="b3">
  <mock:shadow-root>
    <h1 aria-label="Text" class="ld-heading ld-heading--b3" part="tag">
      <slot></slot>
    </h1>
  </mock:shadow-root>
  Text
</ld-heading>
`;

exports[`ld-heading renders with visual level 1`] = `
<ld-heading level="1" visual-level="h3">
  <mock:shadow-root>
    <h1 class="ld-heading ld-heading--h3" part="tag">
      <slot></slot>
    </h1>
  </mock:shadow-root>
  Text
</ld-heading>
`;
